--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         
      </div>
      <div class="main-content">
-       <div>Bible Study</div>
+       <div><a href="bibleStudy.html">Bible study</a></div>
        <div>Questions</div>
        
        <div>contact us</div>
