--- a/bibleStudy.html
+++ b/bibleStudy.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bible Study</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-     <link rel="stylesheet" href="Bible-Study-css/bibleStudy.css"/>
+     <link rel="stylesheet" href="ibleStudy.css"/>
   </head>
   <body>
     <div class="header">
