--- a/bibleStudy.html
+++ b/bibleStudy.html
@@ -11,7 +11,7 @@
   <body>
     <div class="header">
       <h1>Study online
-      <span class="home-icon"><a href="#"
+      <span class="home-icon"><a href="index.html"
       >🏠</a> </span>
       
       <button onclick="
