--- a/bibleStudy.html
+++ b/bibleStudy.html
@@ -28,7 +28,7 @@
     
     </div>
     <div class="tracks">
-      <a href="#">track:1</a>
+      <a href="pre_eleventh_hour_tract_01.pdf" download="pre_eleventh_hour_tract_01">track:1</a>
       <a href="#">Lesssons</a>
       
       <br>
