--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@ favorite
 
       <span>1 hour ago</span>
 
-      <a href="#"><span id="like" class="material-symbols-outlined">
+      <span><span id="like" class="material-symbols-outlined">
 
 favorite
 
@@ -472,7 +472,7 @@ favorite
 
 <span class="count">1</span>
 
-</a>
+</span>
 
      
 
