--- a/index.html
+++ b/index.html
@@ -402,8 +402,8 @@ body {
 
           <img class="img"src="unknown.png"> 
 
-          <h2>Joseph Chilinda</h2>
-
+          <h2>Free literature</h2>
+         <h5 style="color:red;">Only available in Zambia,Lusaka</h5>
         </div>
 
         <div class="content">
@@ -445,7 +445,7 @@ favorite
 
           <img class="img"src="unknown.png"> 
 
-          <h2>Christopher Mwiya</h2>
+          <h2>What's New</h2>
 
         </div>
 
@@ -462,7 +462,7 @@ favorite
 
     <div class="actions">
 
-      <span>1 hour ago</span>
+      <span>1 day ago</span>
 
       <span><span id="like" class="material-symbols-outlined">
 
