--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@ body {
 
     <div class="actions">
 
-      <span>1 day ago</span>
+      <span>2 days ago</span>
 <span>
     <span id="like" class="material-symbols-outlined">
 
@@ -463,7 +463,7 @@ favorite
 
     <div class="actions">
 
-      <span>1 day ago</span>
+      <span>2 days ago</span>
 
 
      
@@ -498,7 +498,7 @@ favorite
 
     <div class="actions">
 
-      <span>1 min ago</span>
+      <span>1 day ago</span>
 
       
 
