--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" /> 
-<link rel="icon" type="image/x-icon" href="logo2.jpg">
+<link rel="icon" type="image/x-icon" href="logo.jpg">
   
 
     <title>Spirit of prophecy</title>
@@ -524,17 +524,70 @@ favorite
 
         ">
 
-Ellen G. White (1827-1915) was an American Christian author and co-founder of the Seventh-day Adventist Church. She was born in Gorham, Maine, and raised in a Methodist family. At the age of 13, she experienced a traumatic injury that left her unconscious for several weeks. During this time, she had a series of visions that she believed were from God.
 
-Throughout her life, Ellen G. White claimed to have received over 2,000 visions and dreams. She saw her role as a messenger of God, and her writings are considered by Seventh-day Adventists to be inspired by God.
+<p> <strong>BRIEF HISTORY OF SDA</strong>
 
-In the 1840s, Ellen G. White became involved in the Millerite movement, a group of Christians who believed that the Second Coming of Jesus Christ was imminent. When the predicted date for the Second Coming passed without event, many Millerites were disappointed and disillusioned. However, Ellen G. White continued to have visions and began to develop a theology that would later become the basis for the Seventh-day Adventist Church.
+The Seventh-day Adventist Church formed out of the movement known today as the Millerites. In 1831, a Baptist convert, William Miller, was asked by a Baptist to preach in their church and he began to preach that the Second Advent of Jesus would occur somewhere between March 1843 and March 1844, based on his interpretation of Daniel 8:14. A following gathered around Miller that included many from the Baptist, Methodist, Presbyterian and Christian Connection churches. In the summer of 1844, some of Miller's followers promoted the date of October 22. They linked the cleansing of the sanctuary of Daniel 8:14 with the Jewish Day of Atonement, believed to be October 22 that year. By 1844, over 100,000 people were anticipating what Miller had called the "Blessed Hope". On October 22 many of the believers were up late into the night watching, waiting for Christ to return and found themselves bitterly disappointed when both sunset and midnight passed with their expectations unfulfilled. This event later became known as the Great Disappointment.
 
-In 1863, the Seventh-day Adventist Church was officially founded, with Ellen G. White and her husband James White as two of its co-founders. Ellen G. White's writings, including her most famous book "The Great Controversy," continue to be widely read by Seventh-day Adventists today.
+After the disappointment of October 22 many of Miller's followers were left upset and disillusioned. Most ceased to believe in the imminent return of Jesus. Some believed the date was incorrect. A few believed that the date was right but the event expected was wrong. This latter group developed into the Seventh-day Adventist Church. One of the Adventists, Hiram Edson (1806–1882) wrote "Our fondest hopes and expectations were blasted, and such a spirit of weeping came over us as I never experienced before. It seemed that the loss of all earthly friends could have been no comparison. We wept, and wept, till the day dawn."[6] On the morning of October 23, Edson, who lived in Port Gibson, New York was passing through his grain field with a friend. He later recounted his experience:
 
-Despite her influence on the Seventh-day Adventist Church, Ellen G. White's life and teachings have been the subject of controversy. Some critics have accused her of plagiarism and questioned the validity of her visions. However, many Seventh-day Adventists consider her to be a prophet and continue to hold her writings in high regard.
+"We started, and while passing through a large field I was stopped about midway of the field. Heaven seemed opened to my view, and I saw distinctly and clearly that instead of our High Priest coming out of the Most Holy of the heavenly sanctuary to come to this earth on the tenth day of the seventh month, at the end of the 2300 days [calculated to be October 22, 1844], He for the first time entered on that day the second apartment of that sanctuary; and that He had a work to perform in the Most Holy before coming to the earth."[7]
 
-</p>
+Edson shared his experience with many of the local Adventists who were greatly encouraged by his account. As a result, he began studying the bible with two of the other believers in the area, O.R.L. Crosier and Franklin B. Hahn, who published their findings in a paper called Day-Dawn. This paper explored the biblical parable of the Ten Virgins and attempted to explain why the bridegroom had tarried. The article also explored the concept of the day of atonement and what the authors called "our chronology of events".[8][9]
+
+The findings published by Crosier, Hahn and Edson led to a new understanding about the sanctuary in heaven. Their paper explained how there was a sanctuary in heaven, that Christ, the High Priest, was to cleanse. The believers understood this cleansing to be what the 2300 days in Daniel was referring to.[10]
+
+George Knight wrote, "Although originally the smallest of the post-Millerite groups, it came to see itself as the true successor of the once-powerful Millerite movement."[11] This view was endorsed by Ellen White. However, Seeking a Sanctuary sees it more as an offshoot of the Millerite movement.
+
+The "Sabbath and Shut Door" Adventists were disparate, but slowly emerged. Only Joseph Bates had had any prominence in the Millerite movement.[12]
+
+Adventists are heirs of earlier outcast believers; Waldenses, Protestant Reformers
+
+The early Seventh-Day Adventist 
+
+they saw the necessity for organization as a means for proclaiming these truths to the world. The denomination was formally organized on May 23, 1863, in Battle Creek, Michigan.
+
+The men and women who were a part of the development of this denomination came from various religious backgrounds
+
+The focus of the Seventh-day Adventist Church tended more toward basic denominational organization and development, emphasis on obedience to the Ten Commandments, and efforts at evangelism and church growth 
+
+The 1888 Minneapolis General Conference Session was a meeting of the General Conference of Seventh-day Adventists held in Minneapolis, Minnesota, in October 1888. It is regarded as a landmark event in the history of the Seventh-day Adventist Church. Key participants were Alonzo T. Jones and Ellet J. Waggoner, who presented a message on justification supported by Ellen G. White, but resisted by leaders such as G. I. Butler, Uriah Smith and others. The session discussed crucial theological issues such as the meaning of "righteousness by faith", the nature of the Godhead, the relationship between law and grace, and Justification and its relationship to Sanctification.
+
+Ellen White saw the importance of the 1888 message Jones and Waggoner brought and why it was needed for the members can be seen in her comments on the message of righteousness by faith.
+
+"Many had lost sight of Jesus. They needed to have their eyes directed to His divine person, His merits, and His changeless love for the human family. All power is given into His hands, that He may dispense rich gifts unto men, imparting the priceless gift of His own righteousness to the helpless human agent." Testimonies to Ministers, 92.  
+
+But when all is said and done, the simple truth is that no one knows precisely what Waggoner and Jones actually said in Minneapolis in 1888. Attempts to discover transcripts of their messages have not yet been successful, and claims that such transcripts have been located have not been validated.
+
+Ellen Gould White (née Harmon; November 26, 1827 – July 16, 1915) was an American woman author and co-founder of the Seventh-day Adventist Church. Along with other Adventist leaders such as Joseph Bates and her husband James White. White is considered a leading figure in American vegetarian history.
+
+At the time of her death Ellen White's literary productions totaled approximately 100,000 pages: 
+
+It was a great loss to the church to lose one of the main pioneers and its prophet. The church had to move from that day onwards without her to reprove sins of ministers and members. But she left material for which the church must feed, grow and know the next great events in the history of Adventistism.  
+
+Her first vision was the 144000 and she says the last work  for the church is the sealing of the 144000 (3T266). Yet died with out giving the truth of this subject is a wonder!
+
+Every Adventist’s should know that the person to point at truth when everyone is against had gone. the onely safe way to know what is really truth is by personal investigation. Every Adventist has a God given duty to know the truth for him self and prove what ever comes in the name of the lord. 
+
+Over the subject of the 144000 non need be in darkness on the matter for Ellen G White gave a prophecy of hope.
+
+: "I feel confident, Elder Andross, that the brethren in Southern California will find blessing in reviewing the
+
+teachings of Scripture concerning the 144,000 and bringing to bear upon these teachings whatever of light there may be in the published writings of the Spirit of Prophecy, and as prayerful consideration is given the matter in all its bearings, I believe that God will make the truth sufficiently clear to make possible the avoidance of needless and unprofitable questions not vital to the salvation of precious souls."
+
+“It is not His plan that His people shall present something which they have to suppose, which is not taught in the Word. It is not His will that they shall get into controversy over......the hundred and forty-four thousand. those who are the elect of God will in a short time know without question”
+
+The next great event in the Adventist’s history is the truth of the 144000 coming from California in a short time from her time. This truth been reviewed at a later time to the church should be that the sealing as at hand.
+
+Elder A.T. Jones himself said this 5 years after 1888:
+
+That (1888 experience) however, is but a sample. There will be THINGS TO COME that will be more surprising than that was to those-at Minneapolis,))) more surprising than anything we have yet seen. ((( And brethren, we will be REQUIRED TO RECEIVE and preach THAT TRUTH ! But, unless you and I have every fiber of that spirit rooted out of our hearts, we will treat that message and THE MESSENGER by whom it is sent , as God has declared we have treated this other message. General Conference Bulletin, 1893 p. 185.
+
+From the sealing time the next great event is the loudcry of the third angel during national Sunday law.
+
+The seven plaques then the second Coming of Jesus Christ.
+
+We have come to the end of our brief history of Seventh-Day Adventist. Any questions and comments?</p>
 
       </div>
 
