--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <ul>
 
-          <li><a href="bibleStudy.html">Study</a></li>
+          <li><a href="bible.html">Study</a></li>
 
           <li><a href="law.html"><span class="material-symbols-outlined">
 
