--- a/bible.html
+++ b/bible.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="heading">
-    <a href="quotes.html">
+    <a href="gen.html">
       <i class="fas fa-quote-left"></i>
     </a>
     Tracks
