--- a/bible.html
+++ b/bible.html
@@ -40,6 +40,14 @@
         <img src="track1.png" alt="Track 1">
       </a>
     </div>
+    
+  <div class="loading">
+    <div style="width:200px;margin-left:80px;margin-top:40px">
+      <img src="loading.jpg" class="load" />
+    </div>
+    <h1>loading <span id="loadingNo">0</span></h1>
+    <h3>psalms 56:3</h3>
+  </div>
     <div style="background-color: #CCFFCC;">
       <a href="track2.pdf" download="Track 2">
         <img src="track2.png" alt="Track 2">
