--- a/gen.html
+++ b/gen.html
@@ -8,6 +8,14 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
+   
+  <div class="loading">
+    <div style="width:200px;margin-left:80px;margin-top:40px">
+      <img src="loading.jpg" class="load" />
+    </div>
+    <h1>loading <span id="loadingNo">0</span></h1>
+    <h3>psalms 56:3</h3>
+  </div>
   <div class="container">
     <div>
       <h1>Ellen g white</h1>
