--- a/gen.html
+++ b/gen.html
@@ -5,7 +5,8 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Ellen G White quotes</title>
-  <link rel="stylesheet" href="index.css">
+ <link rel="stylesheet" href="loading.css">
+   <link rel="stylesheet" href="index.css">
 </head>
 <body>
    
@@ -24,6 +25,7 @@
     </div>
     <button class="btn"><p>New qoutes</p></button>
   </div>
+   <script src="homepage.js"></script>
   <script src="index.js"></script>
 </body>
 </html>
