--- a/bible.html
+++ b/bible.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+ <link rel="stylesheet" href="loading.css">
   <link rel="stylesheet" href="Bible.css" />
   <style>
     .grid {
@@ -119,6 +120,7 @@
       </a>
     </div>
   </div>
+  <script src="homepage.js"></script>
 </body>
 </html>
 
