--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <ul>
 
-          <li><a href="bible.html">Study</a></li>
+          <li><a href="bible.html">Tracks</a></li>
 
           <li><a href="law.html"><span class="material-symbols-outlined">
 
@@ -49,7 +49,7 @@
 
           </span></a></li>
 
-          <liid=""><a href="notAvailable.html">Services</a></li>
+          <liid=""><a href="notAvailable.html">Lessons</a></li>
 
         </ul>
 
