--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
           </span></a></li>
 
-          <liid=""><a href="notAvailable.html">Lessons</a></li>
+          <liid=""><a href="https://github.com/spiritofprophecy/Lessons/blob/d66f8738971f673914f7bf22adddaf629d8c1bc3/Lessons.html">Lessons</a></li>
 
         </ul>
 
